<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:title="@string/settings" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/enableFileSizeLimitSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enable_file_size_limit"
                android:textAppearance="?attr/textAppearanceBodyLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="64dp"
                android:text="@string/only_scan_small_files_description"
                android:textAppearance="?attr/textAppearanceBodySmall"
                android:textColor="?android:attr/textColorSecondary" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>