<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/sort_by"
        android:textAppearance="?attr/textAppearanceTitleSmall"
        android:textColor="@color/material_on_surface_emphasis_medium" />

    <LinearLayout
        android:id="@+id/sortByNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="24dp"
        android:paddingVertical="16dp">

        <ImageView
            android:id="@+id/sortByNameIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/checkmark"
            android:src="@drawable/check"
            android:visibility="gone" />

        <TextView
            android:id="@+id/sortByNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sort_icon_width"
            android:layout_weight="1"
            android:text="@string/name"
            android:textAppearance="?attr/textAppearanceBody1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sortBySizeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="24dp"
        android:paddingVertical="16dp">

        <ImageView
            android:id="@+id/sortBySizeIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@drawable/check"
            android:visibility="gone" />

        <TextView
            android:id="@+id/sortBySizeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sort_icon_width"
            android:layout_weight="1"
            android:text="@string/size"
            android:textAppearance="?attr/textAppearanceBody1" />

    </LinearLayout>

</LinearLayout>